5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1674_1872.log
== SUBMITION (2019-04-30 11:24:40) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = int(input("Coordenada y:"))

if(x=0 and y=0):
	print("Origem")
elif(x=0 and y>0):
	print("Eixo Y")
elif(x>0 and y=0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.222776
-- ERROR:
  File "/home/codebench/codes/1674/1872/main.py", line 5
    if(x=0 and y=0):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:24:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = int(input("Coordenada y:"))

if(x=0 and y=0):
	print("Origem")
elif(x=0 and y>0):
	print("Eixo Y")
elif(x>0 and y=0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
File "XXXX", line 5
    if(x=0 and y=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:25:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = int(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0):
	print("Eixo Y")
elif(x>0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.130015
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:25:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = int(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0):
	print("Eixo Y")
elif(x>0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:25:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0):
	print("Eixo Y")
elif(x>0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.139228
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:25:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0):
	print("Eixo Y")
elif(x>0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:25:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0):
	print("Eixo Y")
elif(x>0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.142679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:26:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or y<0):
	print("Eixo Y")
elif(x>0 or x<0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:27:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or y<0):
	print("Eixo Y")
elif(x>0 or x<0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.216822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:27:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and y>0 or y<0):
	print("Eixo Y")
elif(x>0 or x<0 and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:27:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
File "XXXX", line 7
    elif(x==0 and (y>0 or y<0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:28:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:28:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.175235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:28:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q2")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q1")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:29:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.168994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:29:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.151829
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:29:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:29:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.184796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:30:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:30:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:30:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0 and (y>0 or y<0)):
	print("Eixo Y")
elif((x>0 or x<0) and y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:31:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.137257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:31:19) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:31:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y<0):
	print("Q3")
elif(x<0 and y>0):
	print("Q2")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:32:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.145444
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:32:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:32:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:32:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:32:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:32:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:32:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x==0 and y==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:33:13) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x= y ==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
File "XXXX", line 5
    if(x= y ==0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:33:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x = y ==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
File "XXXX", line 5
    if(x = y ==0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:33:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x == y ==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:33:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x == y ==0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.194889
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1872/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x == y == 0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x == y == 0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:35:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = int(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x == y == 0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:37:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x:"))
y = float(input("Coordenada y:"))

if(x == y == 0):
	print("Origem")
elif(x==0):
	print("Eixo Y")
elif(y==0):
	print("Eixo X")	
elif(x>0 and y>0):
	print("Q1")
elif(x<0 and y>0):
	print("Q2")	
elif(x<0 and y<0):
	print("Q3")
elif(x>0 and y<0):
	print("Q4")	
-- EXECUTION TIME:
0.170613
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
